# file-sync

./: .gitignore  Cargo.toml
file_sync_client/: README.md  package-lock.json  package.json
file_sync_client/src/: App.css  App.jsx
file_sync_client/src-tauri/: Cargo.toml  tauri.conf.json
file_sync_client/src-tauri/src/: lib.rs  main.rs
file_sync_server/: Cargo.toml
file_sync_server/src/: main.rs
libs/dir_json/: Cargo.toml
libs/dir_json/src/: lib.rs  models.rs
libs/file_sync_proto/: Cargo.toml
libs/file_sync_proto/src/: lib.rs
