[package]
name = "file_sync_servar"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.43"
dir_json = { version = "0.1.0", path = "../libs/dir_json" }
dotenvy = "0.15.7"
file_sync_proto = { version = "0.1.0", path = "../libs/file_sync_proto" }
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
