[package]
name = "file_sync_client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "file_sync_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# tauri-plugin-dialog = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

dir_json = { path = "../../libs/dir_json" }
file_sync_proto = { path = "../../libs/file_sync_proto" }

# 非同期処理用 (fs, net, timeなどを使うためfullが必要)
tokio = { version = "1", features = ["full"] }

# HTTP通信用 (jsonとstream機能が必要)
reqwest = { version = "0.12", features = ["json", "stream"] }

# 正規表現
regex = "1"

# 環境変数
dotenvy = "0.15"
tauri-plugin-dialog = "2"

chrono = "0.4.43"
walkdir = "2.5.0"
